logs/dag_id=create_and_populate_taxigov_datawarehouse/run_id=manual__2022-08-28T23:17:20.028990+00:00/task_id=create_dim_requests_table/attempt=1.log
[2022-08-28 23:17:25,498] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_requests_table manual__2022-08-28T23:17:20.028990+00:00 [queued]>
[2022-08-28 23:17:25,506] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_requests_table manual__2022-08-28T23:17:20.028990+00:00 [queued]>
[2022-08-28 23:17:25,506] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:17:25,506] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-28 23:17:25,506] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:17:25,515] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_dim_requests_table> on 2022-08-28 23:17:20.028990+00:00
[2022-08-28 23:17:25,518] {standard_task_runner.py:52} INFO - Started process 2402 to run task
[2022-08-28 23:17:25,519] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'create_and_populate_taxigov_datawarehouse', 'create_dim_requests_table', 'manual__2022-08-28T23:17:20.028990+00:00', '--job-id', '96', '--raw', '--subdir', 'DAGS_FOLDER/create_and_populate_taxigov_datawarehouse_dag.py', '--cfg-path', '/tmp/tmp2vdzc8d0', '--error-file', '/tmp/tmp0cq7uxys']
[2022-08-28 23:17:25,520] {standard_task_runner.py:80} INFO - Job 96: Subtask create_dim_requests_table
[2022-08-28 23:17:25,562] {task_command.py:371} INFO - Running <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_requests_table manual__2022-08-28T23:17:20.028990+00:00 [running]> on host ddc8002727e0
[2022-08-28 23:17:25,616] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_and_populate_taxigov_datawarehouse
AIRFLOW_CTX_TASK_ID=create_dim_requests_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T23:17:20.028990+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-28T23:17:20.028990+00:00
[2022-08-28 23:17:25,624] {base.py:68} INFO - Using connection ID 'redshift_default' for task execution.
[2022-08-28 23:17:27,134] {dbapi.py:231} INFO - Running statement: 
    DROP TABLE IF EXISTS dim_requests;

    CREATE TABLE IF NOT EXISTS dim_requests AS 
        SELECT
            TO_HEX(
                SHA2(
                    CONCAT(
                        CAST(data_abertura AS STRING), 
                        nome_orgao
                    ),
                    256
                )
            ) AS id,
            UPPER(nome_orgao) AS requested_by,
            data_abertura AS requested_at,
            data_despacho AS approved_at,
            UPPER(motivo_corrida) AS reason,
            destino_solicitado_latitude AS requested_dropoff_latitude,
            destino_solicitado_longitude AS requested_dropoff_longitude,
            conteste_info AS commentary
        FROM
            raw__taxigov_corridas;, parameters: None
[2022-08-28 23:17:27,731] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "AS"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_requests AS 
                                                    ^

[2022-08-28 23:17:27,752] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=create_and_populate_taxigov_datawarehouse, task_id=create_dim_requests_table, execution_date=20220828T231720, start_date=20220828T231725, end_date=20220828T231727
[2022-08-28 23:17:27,771] {standard_task_runner.py:97} ERROR - Failed to execute job 96 for task create_dim_requests_table (syntax error at or near "AS"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_requests AS 
                                                    ^
; 2402)
[2022-08-28 23:17:27,817] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-28 23:17:27,855] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
